--- a/Competitive/.classpath
+++ b/Competitive/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="finalPalin.java|pali.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="input"/>
 	<classpathentry kind="src" path="Problem Descriptions"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
