--- a/Competitive/.classpath
+++ b/Competitive/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry excluding="finalPalin.java|pali.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="input"/>
 	<classpathentry kind="src" path="Problem Descriptions"/>
+	<classpathentry kind="src" path="incomplete"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
